--- a/index.html
+++ b/index.html
@@ -1,29 +1,8 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <title>Lori Goes to School</title>
-    <link type="text/css" rel="stylesheet" href="/css/main.css" />
-  </head>
-  <body>
-    <nav>
-         <ul>
-        		<li><a href="/">Home</a></li>
-	        	<li><a href="/about">About</a></li>
-        		<li><a href="/cv">CV</a></li>
-        		<li><a href="/blog">Blog</a></li>
-    		  </ul>
-    		</nav>
-    		<div class="container">
-    		<div class="blurb">
-        		<h1>Hi there, I'm Lori</h1>
-				<p>More info here.</p>
-    		</div><!-- /.blurb -->
-		</div><!-- /.container -->
-		<footer>
-    		<ul>
-        		<li><a href="mailto:lori.burleson@gmail.com">email</a></li>
-        		<li><a href="https://github.com/lburl01">github.com/lburl01</a></li>
-			</ul>
-		</footer>
-  </body>
-</html>
+---
+layout: default
+title: busy lori bee
+---
+<div class="blurb">
+	<h1>Hi there, I'm Lori!</h1>
+	<p>Just me. Being a bee.</p>
+</div><!-- /.blurb -->
