updated css for body text, updated bloggin post, edited homepage blurb

--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 ---
 layout: default
-title: busy lori bee
+title: run with scissors. walk with erasers.
 ---
 <div class="blurb">
-	<h1>Reports from the wild of The Iron Yard, Durham.</h1>
-	<h2>Just me. Being a busy bee learning, living, and reporting on my adventures.</h2>
+	<h1>Run with scissors. Walk with erasers</h1>
+	<h2>Reports from the wild of The Iron Yard, Durham. | Ruby on Rails</h2>
 </div><!-- /.blurb -->
 
 <div class="posts_summary">
