--- a/about.html
+++ b/about.html
@@ -6,6 +6,8 @@ title: about me
 <h2>Fun facts and unimportant information about the hu-woman behind all these words</h2>
 
 <img src="http://i.imgur.com/hW00sPm.jpg" />
+<img src="http://i.imgur.com/7ECIrTd.png" />
+<img src="http://i.imgur.com/V90cxVW.png" />
 
 <div class="right">
 <ul>
