--- a/about.html
+++ b/about.html
@@ -10,9 +10,9 @@ title: about me
 </div>
 
 <div class="right">
-  <p>My name is Lori. I wasn't named after anything and my brother was named after a soap opera character. You better believe I had a better name story than that.</p>
+  <p>My name is Lori. I wasn't named after anything and my brother was named after a television soap opera character. You better believe I wish I had a better name story than that.</p>
     <p>I've got 1 husband. He also speaks computer and teaches me things about Python, databases, and we collaborate on projects like KitchenPanda (which you can explore on my github page using the link below).</p>
-    <p>We have two dogs. A crotchety old (13yrs in 9/16) lab mix named Miles Davis and a probably 2-year-old fuzzy terrier monster named Don Ellis the Dog.</p>
+    <p>We have two dogs. A crotchety old (13yrs in 9/16) lab mix named Miles Davis and a probably 2-year-old fuzzy terrier cuddle-monster named Don Ellis the Dog.</p>
     <p>I like film photography, typewriters, cooking new things, baking german pastries with my grandmother, canning and preserving fruits and veggies, walking in the woods, and playing video and board games with friends.</p>
   </ul>
     <p align="center">Thanks for reading and I promise not to talk about myself in the third person; Lori really hates that.</p>
