added header and footer bars

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@ layout: default
 title: run with scissors. walk with erasers.
 ---
 <div class="blurb">
-	<h1>Run with scissors. Walk with erasers</h1>
-	<h2>Reports from the wild of The Iron Yard, Durham. | Ruby on Rails</h2>
+	<h1>busy lori bee</h1>
+	<h2>Reports from the wild of The Iron Yard, Durham | Ruby on Rails</h2>
 </div><!-- /.blurb -->
 
 <div class="posts_summary">
