changed css files and layout

--- a/index.html
+++ b/index.html
@@ -1,9 +1,8 @@
 ---
 layout: default
-title: run with scissors. walk with erasers.
+title: busy lori bee
 ---
 <div class="blurb">
-	<h1>busy lori bee</h1>
 	<h2>Reports from the wild of The Iron Yard, Durham | Ruby on Rails</h2>
 </div><!-- /.blurb -->
 
