--- a/about.html
+++ b/about.html
@@ -5,23 +5,17 @@ title: about me
 <h1>{{ page.title }}</h1>
 <h2>Fun facts and unimportant information about the hu-woman behind all these words</h2>
 
-<div class="sidebar">
-<img src="http://i.imgur.com/hW00sPm.jpg" />
-</div>
-
-<div class="right">
-  <p>My name is Lori. I wasn't named after anything and my brother was named after a television soap opera character. You better believe I wish I had a better name story than that.</p>
-    <p>I've got 1 husband. He also speaks computer and teaches me things about Python, databases, and we collaborate on projects like KitchenPanda (which you can explore on my github page using the link below).</p>
-    <p>We have two dogs. A crotchety old (13yrs in 9/16) lab mix named Miles Davis and a probably 2-year-old fuzzy terrier cuddle-monster named Don Ellis the Dog.</p>
-    <p>I like film photography, typewriters, cooking new things, baking german pastries with my grandmother, canning and preserving fruits and veggies, walking in the woods, and playing video and board games with friends.</p>
-  </ul>
-    <p align="center">Thanks for reading and I promise not to talk about myself in the third person; Lori really hates that.</p>
-  </div>
-
-  <table width="100%">
-    <tr>
-      <td class="gallery"><img class="bottom" src="http://i.imgur.com/7ECIrTd.png" /></td>
-      <td class="gallery"><img class="bottom" src="http://i.imgur.com/V90cxVW.png" /></td>
-      <td class="gallery"><img class="bottom" src="http://i.imgur.com/0afVy4A.png" /></td>
+<table width="100%">
+  <tr>
+    <td class="gallery"><img class="square_img" src="http://i.imgur.com/hW00sPm.jpg" /></td>
+    <td class="gallery"><img class="square_img" src="http://i.imgur.com/V90cxVW.png" /></td>
+    <td class="gallery"><img class="square_img" src="http://i.imgur.com/0afVy4A.png" /></td>
 </tr>
 </table>
+
+  <p>My name is Lori. I wasn't named after anything and my brother was named after a television soap opera character. You better believe I wish I had a better name story than that.</p>
+    <p>I've got 1 husband. He also speaks computer and teaches me things about Python, databases, and we collaborate on projects like KitchenPanda (which you can explore on my github page using the link below).</p>
+    <p>We have two dogs. A crotchety 13-year-old lab mix named Miles Davis and a probably 2-year-old fuzzy terrier cuddle-monster named Don Ellis the Dog.</p>
+    <p>I like film photography, typewriters, cooking new things, baking german pastries with my grandmother, canning and preserving fruits and veggies, walking in the woods, and playing video and board games with friends.</p>
+  </ul>
+    <p align="center">Thanks for reading and I promise not to talk about myself in the third person; Lori really hates that.</br></br><a href="mailto:lori.burleson@gmail.com">email</a> <a href="https://github.com/lburl01">github.com/lburl01</a></p>
