--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ title: busy lori bee
 	<ul class="posts">
 
 		{% for post in site.posts %}
-			<li><span>{{ post.date | date_to_string }}</span> » <a href="{{ post.url }}" title="{{ post.title }}">{{ post.title }}</a><br /></li>
+			<li><span id="bottom_margin">{{ post.date | date_to_string }}</span> » <a href="{{ post.url }}" title="{{ post.title }}">{{ post.title }}</a></li>
 		{% endfor %}
 	</ul>
 </div>
