--- a/about.html
+++ b/about.html
@@ -2,14 +2,14 @@
 layout: default
 title: about me
 ---
-<h1>{{ page.title }}</h1>
-<h2>Fun facts and unimportant information about the hu-woman behind all these words</h2>
+<h5>{{ page.title }}</h5>
+<h6>Fun facts and unimportant information about the hu-woman behind all these words</h6>
 
 <table width="100%">
   <tr>
-    <td class="gallery"><img class="square_img" src="http://i.imgur.com/hW00sPm.jpg" /></td>
-    <td class="gallery"><img class="square_img" src="http://i.imgur.com/V90cxVW.png" /></td>
-    <td class="gallery"><img class="square_img" src="http://i.imgur.com/0afVy4A.png" /></td>
+    <td><img class="square_img" src="http://i.imgur.com/hW00sPm.jpg" /></td>
+    <td><img class="square_img" src="http://i.imgur.com/V90cxVW.png" /></td>
+    <td><img class="square_img" src="http://i.imgur.com/0afVy4A.png" /></td>
 </tr>
 </table>
 
