--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@ layout: default
 title: busy lori bee
 ---
 <div class="blurb">
-	<h1>Reports from the wild of The Iron Yard, Durham | Ruby on Rails</h1>
+	<h5>Reports From the Wild</h5>
+	<h5>The Iron Yard, Durham: Ruby on Rails</h5>
+	<hr>
 </div><!-- /.blurb -->
 
 <div class="posts_summary">
