Added link to blogroll.

--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 layout: testing2
 title: busy lori bee
 ---
-<div class="blurb">
+<!-- <div class="blurb">
 	<h3>Reports From the Wild</h3>
 	<h3>The Iron Yard, Durham: Ruby on Rails</h3>
 	<hr>
-</div><!-- /.blurb -->
+</div>
 
 <div class="posts_summary">
 	<ul class="posts">
@@ -15,4 +15,4 @@ title: busy lori bee
 			<li><span id="bottom_margin">{{ post.date | date_to_string }}</span> » <a href="{{ post.url }}" title="{{ post.title }}">{{ post.title }}</a></li>
 		{% endfor %}
 	</ul>
-</div>
+</div> -->
