Limited blog post list to 5 posts at a time. Centered in blogging section.

--- a/index.html
+++ b/index.html
@@ -1,18 +1,4 @@
 ---
-layout: testing2
+layout: default
 title: busy lori bee
 ---
-<!-- <div class="blurb">
-	<h3>Reports From the Wild</h3>
-	<h3>The Iron Yard, Durham: Ruby on Rails</h3>
-	<hr>
-</div>
-
-<div class="posts_summary">
-	<ul class="posts">
-
-		{% for post in site.posts %}
-			<li><span id="bottom_margin">{{ post.date | date_to_string }}</span> » <a href="{{ post.url }}" title="{{ post.title }}">{{ post.title }}</a></li>
-		{% endfor %}
-	</ul>
-</div> -->
